fixed german translation

--- a/index.html
+++ b/index.html
@@ -103,18 +103,15 @@ You can learn more about how Camera Adversaria was built and why, by reading <a 
 
 <article id="lang-de" hidden="true">
 <p>
-<b>Camera Adversaria</b> ist eine Handyapp Entworfen um das automatische Überwachung von Bildern durch Technologiefirmen zu stören. 
-Es ändert subtil das Pixel deines Fotos um Bildklassifizierungssysteme zu verwirren.
+<b>Camera Adversaria</b> ist eine App, entworfen um die automatische Überwachung von Bildern durch Technologiefirmen zu stören. Sie ändert fast unmerklich die Pixel eines Fotos, um Bildklassifizierungssysteme zu verwirren.</p>
+
+<h2>Wie sie funktioniert</h2>
+<p>Camera Adversaria benutzt eine spezielle Art von Bildfilter, namens "adversarial perturbation". Dieser Filter ist so programmiert, dass er Low-Level Pixel Muster, welche moderne KI Systeme verwenden um Bilder zu lesen, zu stören.</p>
+<p>
+Mehr über den Ursprung und die Entstehung von Camera Adversaria finden Sie im <a href="https://kieranbrowne.com/publications/camera_adversaria.pdf">Forschungspapier</a>, oder in der<a href="https://youtu.be/cNGHZs47atU">Konferenzpräsentation</a>.  Falls Sie im Umgang mit Kotlin vertraut sind, können Sie sich auch den <a href="https://github.com/kieranbrowne/camera-adversaria">Quellcode</a> der App anschauen. 
 </p>
 
-<h2>Wie functioniert es</h2>
-<p>
-Camera Adversaria benutzt eine bestimmte Art von Bildfilter, namens "adversarial perturbation". Dieser filter ist optimiert um das Low-Level Pixelmustern die zeitgenössische KI systeme verwenden, um Bilder zu verstehen, zu stören.</p>
-<p>
-Sie können mehr um wie Camera Adversaria erbaut war und warum lernen, indem Sie <a href="https://kieranbrowne.com/publications/camera_adversaria.pdf">das Forschungspaper</a> lesen, oder <a href="https://youtu.be/cNGHZs47atU">die Konferenzpräsentation</a> anschauen.  Andernfalls, wenn sie Kotlin lesen können, lernen Sie genauso functioniert es indem Sie <a href="https://github.com/kieranbrowne/camera-adversaria">den Quellcode</a> lesen. 
-</p>
-
-<h2>Wie man es bekommt</h2>
+<h2>Wo erhält man die App?</h2>
 <p>Camera Adversaria ist jetzt verfügbar bei Google Play.</p>
 <p class="center">
 <a href='https://play.google.com/store/apps/details?id=com.kieranbrowne.cameraadversaria&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Jetzt bei Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/de_badge_web_generic.png'  width="220px"/></a>
